tests/rosetta/out/Fortran/array-length.error
gfortran: exit status 1
/tmp/array-length.f90:10:20:

   10 |     arr = (/'apple','orange','pear'/)
      |                    1
Error: Different CHARACTER lengths (5/6) in array constructor at (1)
